# dlfunc

./: .gitignore  README.md  build.gradle
dlfunc/: CMakeLists.txt  build.gradle  consumer-rules.pro  proguard-rules.pro
dlfunc/src/main/java/: dlfunc32.java  dlfunc64.java
dlfunc/src/main/jni/: dlfunc.c
dlfunc/src/main/jni/include/: dlfunc.h
